Revision history for Perl extension Qudo

0.0207
   2010-06-XX
        - REMOVE: Qudo#job_list method. [INCOMPATIBLE CHANGE]
        - MOD: Driver::Skinny#find_job and Driver::Skinny#lookup_job method logic for dry.
        - MOD: do not use by Manager#can_do method [INCOMPATIBLE CHANGE]
        - MOD: Manager#global_(un)register_hook method is deprecated. Use (un)register_hook method instead. [INCOMPATIBLE CHANGE]
        - MOD: Worker#work_safly is not necessary manager instance.
        - FIXED: Manager#lookup method require db argument.

0.0206
   2010-06-02
        - tuning find_job method.

0.0205
   2010-04-21
        - MOD: oops remove use Qudo::HookLoader.

0.0204
   2010-04-21
        - MOD: unexport Carp functions.
        - MOD: remove Qudo::HookLoader.
        - MOD: Qudo::Driver::DBI move to other distribution. (http://github.com/nekokak/p5-qudo-driver-dbi)

0.0203
   2010-03-29
        - MOD: The Hook function in worker was deleted. [INCOMPATIBLE CHANGE]

0.0202
   2010-03-16
        - FIXED: cycle reference.(thanks id:tokuhirom)

0.0201
   2010-03-10
        - FIXED: reset grabbed_until for reenqueue (thanks id:lamanotrama)

0.02
   2009-12-09
        - no change. stable version.

0.01_03
   2009-11-21
        - FIXED: Makefile.pl (add:Class::Data::Inheritable. thanks Andreas J. Koenig)

0.01_02
   2009-11-12
        - ADD: Job status Table for MySQL.
        - ADD: Job priotiry option.
        - ADD: PostgreSQL support.( thanks sagehachi)
        - ADD: Multi Database support.
        - ADD: Documents( Intro,Tutorial,Functions ).
        - FIXED: tests.

0.01_01
  2009-09-05
    - original version