@@ -3,9 +3,7 @@
 - logger plugin
 -- 別パッケージでもよい
 - more document.
-- Test::Baseつかってないよね。。
 - set_job_statusはなまえがきもい
 - 初期schemaをセットアップするスクリプト
 - Qudo::Testでschemaファイルを読み込むのをかしこく
 -- Qudo::Plugin系をだれかが書くときにQudo::Testをつかいやすいように
-
